--- a/www/Views/style.css
+++ b/www/Views/style.css
@@ -2,10 +2,14 @@
  * Globals
  */
 
-/*.redString{ text-indent: 25px; }*/
+html {
+    position: relative;
+    min-height: 100%;
+}
 body {
     font-family: Georgia, "Times New Roman", Times, serif;
     color: #555;
+    margin-bottom: 70px;
 }
 
 h1, .h1,
@@ -37,7 +41,8 @@ h6, .h6 {
  */
 
 .blog-masthead {
-    background-color: #428bca;
+    background-color: black;
+    /*background-color: #428bca;*/
     box-shadow: inset 0 -2px 5px rgba(0,0,0,.1);
 }
 
@@ -161,4 +166,16 @@ h6, .h6 {
     text-align: center;
     background-color: #f9f9f9;
     border-top: 1px solid #e5e5e5;
+}
+#footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    /* Set the fixed height of the footer here */
+    height: 70px;
+    background-color: #f5f5f5;
+}
+#footer > .container {
+    padding: 25px 15px 15px;
 }
