--- a/www/Views/blogStyle.css
+++ b/www/Views/blogStyle.css
@@ -1,6 +1,35 @@
 /*
  * Globals
  */
+
+.comment{
+    border-bottom: 2px solid #9d9d9d;
+    padding: 0 20px 20px 0;
+}
+.comment table{
+    width: 100%;
+}
+.comment tr:first-child td:first-child{
+    width: 150px;
+    padding-right: 15px;
+}
+.comment td {
+    /*padding: 5px;*/
+    margin: 5px;
+}
+.comment img{
+    width: 120px;
+}
+#formComment{
+    padding-bottom: 20px;
+    border-bottom: 2px solid #9d9d9d;
+    margin-bottom: 10px;
+}
+.sub-header {
+    padding-bottom: 10px;
+    border-bottom: 1px solid #eee;
+    margin-bottom: 10px;
+}
 #tableForm{
     padding: 5px;
     width: 100%;
