--- a/www/Views/blogStyle.css
+++ b/www/Views/blogStyle.css
@@ -3,8 +3,9 @@
  */
 
 .comment{
-    border-bottom: 2px solid #9d9d9d;
-    padding: 0 20px 20px 0;
+    border-top: 2px solid #9d9d9d;
+    padding: 10px 20px 20px 0;
+    /*margin-bottom: 10px;*/
 }
 .comment table{
     width: 100%;
@@ -22,7 +23,7 @@
 }
 #formComment{
     padding-bottom: 20px;
-    border-bottom: 2px solid #9d9d9d;
+    /*border-bottom: 2px solid #9d9d9d;*/
     margin-bottom: 10px;
 }
 .sub-header {
