--- a/www/Views/Style/blogStyle.css
+++ b/www/Views/Style/blogStyle.css
@@ -2,6 +2,10 @@
  * Globals
  */
 
+.thumbnail img{
+    width: 100%;
+    height: 130px;
+}
 .comment{
     border-top: 2px solid #9d9d9d;
     padding: 10px 20px 20px 0;
