--- a/www/Views/Style/blogStyle.css
+++ b/www/Views/Style/blogStyle.css
@@ -3,8 +3,8 @@
  */
 
 .thumbnail img{
-    width: 100%;
-    height: 130px;
+    /*width: 267px;*/
+    /*height: 150px;*/
 }
 .comment{
     border-top: 2px solid #9d9d9d;
