--- a/www/Views/Style/blogStyle.css
+++ b/www/Views/Style/blogStyle.css
@@ -241,3 +241,12 @@ h6, .h6 {
 #footer > .container {
     padding: 25px 15px 15px;
 }
+#scrollPage{
+    position: relative;
+    bottom: 0px;
+    width: 100%;
+    text-align: center;
+    /* Set the fixed height of the footer here */
+    height: 70px;
+    background-color: #f5f5f5;
+}
